# ultimate-django-vue-boilerplate

./: .gitignore  LICENSE  README.md
.github/workflows/: app.yml
backend/: README.md  docker-compose.yml  pyproject.toml
backend/config/: celery.py  settings.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
