[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
psycopg2-binary = "^2.9.10"
django-redis = "^5.4.0"
django-prometheus = "^2.3.1"
django-environ = "^0.11.2"
django-storages = {extras = ["boto3"], version = "^1.14.4"}
black = "^24.10.0"
flake8 = "^7.1.1"
pytest-django = "^4.9.0"
celery = "^5.4.0"
redis = "^5.1.1"
flower = "^2.0.1"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
